@@ -14,6 +14,7 @@ Changelog for 1.3.11
 * Fixed some HASH() entries in CSV templates (Chris T)
 * Removed unnecessary shebang lines in scripts/* files (Robert C)
 * Fixed GL recurring transaction not posting (Chris T)
+* Improved error handling when extensions/contrib scripts not found (Chris T)
 
 Changelog for 1.3.10
 * Fixes for permissions for exchangerate table (Erik H)
